--- a/test_board/src/main/webapp/WEB-INF/web.xml
+++ b/test_board/src/main/webapp/WEB-INF/web.xml
@@ -48,5 +48,9 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
+	<!-- Session TimeOut -->
+	<session-config>
+		<session-timeout>10</session-timeout>
+	</session-config>
 
 </web-app>
