--- a/spring_security_exam_3/pom.xml
+++ b/spring_security_exam_3/pom.xml
@@ -55,12 +55,17 @@
             <artifactId>spring-security-config</artifactId>
             <version>3.2.3.RELEASE</version>
         </dependency>
-        
         <dependency>
     		<groupId>org.springframework.security</groupId>
     		<artifactId>spring-security-taglibs</artifactId>
     		<version>3.2.3.RELEASE</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-core</artifactId>
+		    <version>3.2.3.RELEASE</version>
+		</dependency>
+				
         
         <!-- MySQL -->
 		<dependency>
